Restaurant/force-app/main/default/objects/Employee__c/fields/End_Employment_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Employment_Date__c</fullName>
    <description>If the employee no longer works at the company, displays what date they left</description>
    <inlineHelpText>Enter the date the employee left employment on - only managers can create this</inlineHelpText>
    <label>End Employment Date</label>
    <type>Date</type>
</CustomField>