Restaurant/force-app/main/default/objects/Employee__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <length>6</length>
    <type>Text</type>
</CustomField>