Restaurant/force-app/main/default/objects/Employee__c/fields/Hired_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Hired_On_Date__c</fullName>
    <description>The date the employee was hired on</description>
    <inlineHelpText>Enter the date the employee was hired on - only managers can create</inlineHelpText>
    <label>Hired On Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>