Restaurant/force-app/main/default/objects/Employee__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>The employees salary</description>
    <inlineHelpText>Enter the Employees salary in this field - only managers can edit this field</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>