Restaurant/force-app/main/default/objects/Employee__c/recordTypes/Past_Employee.recordType-meta.xml
<RecordType>
    <fullName>Past_Employee</fullName>
    <active>true</active>
    <description>For Employee records that no longer work at the company</description>
    <label>Past Employee</label>
</RecordType>