Restaurant/force-app/main/default/objects/Employee__c/validationRules/stop_editing_past_employees.validationRule-meta.xml
<ValidationRule>
    <fullName>stop_editing_past_employees</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISCHANGED( RecordTypeId ) ) ,(RecordTypeId = &quot;0125f000000bt0j&quot;))</errorConditionFormula>
    <errorMessage>Can&apos;t edit past employee records, for archive use only</errorMessage>
</ValidationRule>